# TAMU-Shell-ECO-Marathon

./: .gitignore  CMakeLists.txt  UART_Test.c  easycontroller.c  easycontroller_debug.c  easycontroller_experimental.c  easymotor_experimental.c  readme.md  temp_view.tmp  uart_counter_receiver.py
.github/: copilot-instructions.md
DIS/: biggertext.py  fast_timer.py  improve_uart_oled.py  timer_button.py  uart_counter_receiver.py  uart_oled.py
DIS/device/: LED.py  LEDS.py  comm.py  config.py  display.py  logger.py  main.py  menu.py  uart_manager.py  vehicle_state.py  writer.py
DIS/device/fonts/: font_digits_large.py  font_digits_med.py  font_letters_large.py
Motor_Code/: CMakeLists.txt  easycontroller.c  easycontroller_debug.c
easycontroller_refactor/: .gitignore  CMakeLists.txt  UART.c  UART.h  easycontroller_refactored.c  motor_control.c  motor_control.h  motor_pins.h  motor_state.c  motor_state.h  motor_user_config.c  motor_user_config.h
